# seams-sdk

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refactor25.md
crates/ecdsa-hss/: Cargo.toml  README.md  optimizations.md  security.md
crates/ecdsa-hss/benches/: performance_baseline.rs
crates/ecdsa-hss/fixtures/: README.md  phase1_v1.json  protocol-v1.json  role_local_v1.json  role_local_v2.json
crates/ecdsa-hss/formal-verification/: README.md
crates/ecdsa-hss/specs/: export.md  integration-cait-sith-backend.md  integration-near-threshold.md  protocol.md
crates/ecdsa-hss/src/: error.rs  fixtures.rs  lib.rs
crates/ecdsa-hss/tests/: formal_verification.rs  phase1_reference.rs  role_local_mvp.rs
crates/ed25519-hss/: Cargo.toml  README.md  homomorphic-secret-sharing.md  optimization-v3.md  optimization.md  quantum.md  refactor-hss-3.md  refactor-hss-4.md  refactor-hss.md  security.md  semihonest-to-malicious-secure.md  succinct-garbling-spec.md
crates/ed25519-hss/docs/: benchmarks.md  covert-security-spot-check.md  derivation.md  homomorphic-secret-sharing.md  ios-benchmark-procedure.md  optimization-5.md  optimization-6.md  optimization-7.md  optimization-8.md  optimization-experiment-ledger.md  semihonest-to-malicious-secure.md
crates/ed25519-hss/examples/: prime_order_separated_roles_e2e.rs
crates/ed25519-hss/fixtures/: f_expand_v1.json
crates/ed25519-hss/formal-verification/: .gitignore  Makefile  README.md
crates/ed25519-hss/scripts/: collect_browser_cache_benchmark.mjs  profile_hidden_eval_flamegraph.sh  run_embedded_profile_arm64_linux.sh
crates/ed25519-hss/specs/: derivation.md  protocol.md
crates/ed25519-hss/src/: artifact_stub.rs  benchmark.rs  cache_benchmark.rs  candidate.rs  ddh_hidden_eval_benchmark.rs  ddh_hidden_eval_executor.rs  ddh_hss.rs  fixtures.rs  hidden_eval.rs  lib.rs  prime_order_cpu_executor.rs  reference.rs  role_signing.rs  succinct_hss.rs  wasm.rs  wasm_benchmark.rs
crates/ed25519-hss/tests/: materialization_graph_guard.rs  mod.rs  prime_order_driver_process.rs
crates/ed25519-hss/web/: indexeddb_cache_benchmark.html
crates/ed25519-yao/: Cargo.toml  README.md
crates/ed25519-yao-cloudflare-bench/: .gitignore  Cargo.toml  README.md  package.json  wrangler.a.cross-account.jsonc  wrangler.a.jsonc  wrangler.a.same-account-rpc.jsonc  wrangler.b.cross-account.jsonc  wrangler.b.jsonc  wrangler.b.same-account-rpc.jsonc  wrangler.fault.fragmentation.a.jsonc  wrangler.fault.fragmentation.b.jsonc  wrangler.fault.request-disconnect.a.jsonc  wrangler.fault.response-disconnect.a.jsonc  wrangler.fault.response-disconnect.b.jsonc  wrangler.fault.session-mismatch.a.jsonc  wrangler.fault.session-mismatch.b.jsonc  wrangler.fault.timeout.a.jsonc  wrangler.fault.timeout.b.jsonc  wrangler.fault.trailing.a.jsonc  wrangler.fault.trailing.b.jsonc  wrangler.fault.wrong-role.a.jsonc  wrangler.fault.wrong-role.b.jsonc  wrangler.fault.wrong-service.a.jsonc  wrangler.fault.wrong-service.service.jsonc
crates/ed25519-yao-cloudflare-bench/deployment-env/: cost.env.example  one-account.env.example  phase13a-operational-acceptance.json.example  two-account.env.example
crates/ed25519-yao-cloudflare-bench/docs/: phase13a-isolation-audit-v1.md  phase13a-local-preflight-evidence-v1.json  phase9b-deployed-measurements.md  phase9b-same-account-report-v085.md  phase9b-same-account-report.md  phase9b-worker-fault-remaining-report.md  phase9b-worker-fault-report.md
crates/ed25519-yao-cloudflare-bench/rpc/: deriver-b-entrypoint.mjs  identity-byte-pipe.mjs
crates/ed25519-yao-cloudflare-bench/scripts/: activation_wire_profile.mjs  assemble_fresh_version_first_request_series.mjs  assert_fault_response.mjs  assert_public_body_rejection.mjs  audit_benchmark_isolation.mjs  calculate_deployed_cost.mjs  collect_workers_analytics.mjs  deployment_boundary.mjs  deployment_receipt.mjs  evaluate_phase13a_local_preflight.mjs  evaluate_phase13a_viability.mjs  local_readiness_bundle.mjs  local_readiness_inputs.mjs  plan_cloudflare_benchmark.mjs  run_deployed_benchmark.mjs  run_same_account_benchmark.mjs  test_benchmark_isolation.mjs  test_cost_report_integrity.mjs  test_deployment_tooling.mjs  test_fresh_version_first_request_series.mjs  test_local_benchmark_tooling.mjs  test_phase13a_local_preflight.mjs  test_rendered_deployment_configs.mjs  validate_local_readiness.mjs
crates/ed25519-yao-cloudflare-bench/src/: lib.rs  wrong_service.mjs
crates/ed25519-yao-cloudflare-bench/tests/: source_guards.rs
crates/ed25519-yao/formal-verification/: Makefile  (+3 more)
crates/router-ab-cloudflare/: .gitignore  Cargo.toml  package.json  wrangler.deriver-a.toml  wrangler.deriver-b.toml  wrangler.router.toml  wrangler.signer-a.toml  wrangler.signer-b.toml  wrangler.signing-worker.toml
crates/router-ab-core/: Cargo.toml  README.md
crates/router-ab-dev/: Cargo.toml  README.md
crates/router-ab-ecdsa-client-protocol/: Cargo.toml
crates/router-ab-ecdsa-derivation/: Cargo.toml  README.md  optimizations.md  security.md
crates/router-ab-ecdsa-near-oracle-tests/: Cargo.toml  README.md
crates/router-ab-ecdsa-online/: Cargo.toml
crates/router-ab-ecdsa-presign/: Cargo.toml
crates/router-ab-ed25519-yao/: Cargo.toml  README.md
crates/router-ab-ed25519-yao-client/: Cargo.toml
crates/router-ab-ed25519-yao-protocol/: Cargo.toml
crates/signer-core/: Cargo.toml
crates/signer-platform-ios/: Cargo.toml
crates/signer-wasm-core/: Cargo.toml
crates/threshold-prf/: Cargo.toml  README.md
tools/ed25519-yao-generator/: Cargo.toml  README.md
voiceId/verifier/: pyproject.toml  test_audio_quality.py  test_moonshine.py  test_schemas.py
wasm/ecdsa_client_signer/: Cargo.toml
wasm/ecdsa_registration_client/: Cargo.toml  README.md
wasm/email_otp_runtime/: Cargo.toml
wasm/eth_signer/: Cargo.toml
wasm/evm_crypto/: Cargo.toml
wasm/evm_transaction_codec/: Cargo.toml
wasm/hss_client_signer/: Cargo.toml
wasm/router_ab_ecdsa_derivation_client/: Cargo.toml
wasm/router_ab_ecdsa_online_client/: Cargo.toml
(+5477 files in other folders)
