[package]
name = "ecdsa-hss"
version = "0.1.0"
edition = "2021"
description = "Fixed-function reference implementation for canonical-key ECDSA HSS derivation"
license = "Apache-2.0"

[lib]
name = "ecdsa_hss"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bench]]
name = "performance_baseline"
harness = false

[dependencies]
hex = "0.4"
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signer-core = { path = "../signer-core", features = ["secp256k1", "threshold-ecdsa"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.5"
