[package]
name = "ed25519-hss"
version = "0.1.0"
edition = "2021"
description = "Fixed-function succinct garbling / HSS implementation for hidden Ed25519 seed expansion"
license = "Apache-2.0"

[lib]
name = "ed25519_hss"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3"
blake3 = "1.5"
chacha20poly1305 = "0.10"
curve25519-dalek = { version = "=4.1.3", features = ["group", "rand_core"] }
ed25519-dalek = "2.1"
ff = "0.13.1"
group = "0.13.0"
hex = "0.4"
merlin = "3.0.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.17", features = ["js"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance", "Window"] }

[profile.release]
lto = "thin"
codegen-units = 1
