[package]
name = "ed25519-yao"
version = "0.1.0"
edition = "2021"
description = "Strict draft manifest types for the Router A/B Ed25519 Yao protocol"
license = "Apache-2.0"
publish = false

[lib]
name = "ed25519_yao"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
sha2 = { version = "0.10.9", default-features = false }
