[package]
name = "ed25519-yao"
version = "0.1.0"
edition = "2021"
description = "Strict draft manifest types for the Router A/B Ed25519 Yao protocol"
license = "Apache-2.0"
publish = false

[lib]
name = "ed25519_yao"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "benchmark_phase5_role"
path = "src/bin/benchmark_phase5_role.rs"
required-features = ["passive-benchmark"]

[features]
default = []
passive-benchmark = []
passive-wasm-benchmark = []
phase9-role-benchmark = []
local-protocol = []

[dependencies]
aes = { version = "=0.8.4", default-features = false, features = ["zeroize"] }
curve25519-dalek = { version = "=4.1.3", default-features = false, features = ["alloc", "precomputed-tables", "zeroize"] }
getrandom = { version = "=0.2.17", features = ["js"] }
sha2 = { version = "0.10.9", default-features = false }
subtle = { version = "=2.6.1", default-features = false }
zeroize = { version = "=1.9.0", default-features = false, features = ["zeroize_derive"] }
