[package]
name = "router-ab-cloudflare"
version = "0.1.0"
edition = "2021"
description = "Cloudflare adapter boundary types for Router/A/B signing"
license = "Apache-2.0"

[lib]
name = "router_ab_cloudflare"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "router_latency"
harness = false

[features]
default = []
strict-worker-entrypoint = ["workers-rs"]
strict-worker-router-entrypoint = ["workers-rs"]
strict-worker-signer-a-entrypoint = ["workers-rs"]
strict-worker-signer-b-entrypoint = ["workers-rs"]
workers-rs = [
    "dep:base64",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:worker",
    "dep:zeroize",
]

[dependencies]
base64 = { version = "0.22", optional = true }
futures = "0.3"
getrandom = { version = "0.2.17", features = ["js"] }
hpke-ng = { version = "=0.1.0", default-features = false }
js-sys = { version = "0.3", optional = true }
rand_core = { version = "0.9", default-features = false }
rand_core_06 = { package = "rand_core", version = "0.6.4" }
router-ab-core = { path = "../router-ab-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "AesGcmParams",
    "Crypto",
    "CryptoKey",
    "SubtleCrypto",
    "WorkerGlobalScope",
], optional = true }
worker = { version = "=0.8.4", optional = true }
zeroize = { version = "1.8", optional = true }

[dev-dependencies]
criterion = "0.5"
ed25519-dalek = { version = "2.1", default-features = false }
wasm-bindgen-test = "0.3"
