[package]
name = "router-ab-cloudflare"
version = "0.1.0"
edition = "2021"
description = "Cloudflare adapter boundary types for Router/A/B signing"
license = "Apache-2.0"

[lib]
name = "router_ab_cloudflare"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []
strict-worker-router-entrypoint = ["workers-rs"]
strict-worker-deriver-a-entrypoint = ["workers-rs"]
strict-worker-deriver-b-entrypoint = ["workers-rs"]
strict-worker-signing-worker-entrypoint = ["workers-rs"]
workers-rs = [
    "dep:wasm-bindgen",
    "dep:worker",
]

[dependencies]
base64 = "0.22"
bs58 = "0.5"
router-ab-ecdsa-derivation = { path = "../router-ab-ecdsa-derivation" }
router-ab-ecdsa-client-protocol = { path = "../router-ab-ecdsa-client-protocol" }
router-ab-ecdsa-online = { path = "../router-ab-ecdsa-online" }
router-ab-ecdsa-pool = { path = "../router-ab-ecdsa-pool" }
router-ab-ed25519-yao = { path = "../router-ab-ed25519-yao" }
ed25519-dalek = { version = "2.1", default-features = false }
frost-ed25519 = { version = "2.2", default-features = false, features = ["serialization", "std"] }
futures = "0.3"
getrandom = { version = "0.2.17", features = ["js"] }
hpke-ng = { version = "=0.1.0", default-features = false }
rand_core = { version = "0.9", default-features = false }
rand_core_06 = { package = "rand_core", version = "0.6.4" }
router-ab-core = { path = "../router-ab-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signer-core = { path = "../signer-core", default-features = false, features = ["near-threshold-ed25519"] }
wasm-bindgen = { version = "0.2", optional = true }
worker = { version = "=0.8.4", optional = true }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
rand_chacha = "0.3"
router-ab-ecdsa-presign = { path = "../router-ab-ecdsa-presign" }
router-ab-ecdsa-wire = { path = "../router-ab-ecdsa-wire" }
wasm-bindgen-test = "0.3"
