[package]
name = "router-ab-core"
version = "0.1.0"
edition = "2021"
description = "Core derivation and protocol types for Router/A/B signing"
license = "Apache-2.0"

[lib]
name = "router_ab_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
borsh = { version = "1.3", features = ["derive"] }
bs58 = "0.5"
curve25519-dalek = { version = "=4.1.3", features = ["zeroize"] }
ed25519-dalek = { version = "2.1", default-features = false }
hex = "0.4"
rand_core = "0.6.4"
router-ab-ecdsa-client-protocol = { path = "../router-ab-ecdsa-client-protocol", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
threshold-prf = { path = "../threshold-prf" }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"
router-ab-ecdsa-client-protocol = { path = "../router-ab-ecdsa-client-protocol", features = ["hpke"] }
