[package]
name = "router-ab-dev"
version = "0.1.0"
edition = "2021"
description = "Local development adapters for Router/A/B signing"
license = "Apache-2.0"

[lib]
name = "router_ab_dev"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
base64 = "0.22"
bs58 = "0.5"
curve25519-dalek = { version = "=4.1.3", features = ["zeroize"] }
ed25519-dalek = { version = "2.1", default-features = false }
ed25519-hss = { path = "../ed25519-hss" }
ecdsa-hss = { path = "../ecdsa-hss" }
getrandom = "0.2.17"
hex = "0.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
router-ab-core = { path = "../router-ab-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signer-core = { path = "../signer-core", features = ["threshold-ecdsa-hss"] }

[dev-dependencies]
router-ab-cloudflare = { path = "../router-ab-cloudflare" }
