[package]
name = "router-ab-dev"
version = "0.1.0"
edition = "2021"
description = "Local development adapters for Router/A/B signing"
license = "Apache-2.0"

[lib]
name = "router_ab_dev"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
base64 = "0.22"
bs58 = "0.5"
curve25519-dalek = { version = "=4.1.3", features = ["zeroize"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
router-ab-ecdsa-derivation = { path = "../router-ab-ecdsa-derivation" }
router-ab-ecdsa-client-protocol = { path = "../router-ab-ecdsa-client-protocol", default-features = false }
router-ab-ecdsa-online = { path = "../router-ab-ecdsa-online" }
getrandom = { version = "0.2.17", features = ["std"] }
hex = "0.4"
hpke-ng = "0.1.0"
frost-ed25519 = "2.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand_core_09 = { package = "rand_core", version = "0.9.5", features = ["os_rng"] }
router-ab-core = { path = "../router-ab-core" }
router-ab-ed25519-yao = { path = "../router-ab-ed25519-yao" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signer-core = { path = "../signer-core", features = [
    "ecdsa-role-local-client",
    "ed25519-yao-derivation",
    "near-threshold-ed25519",
    "secp256k1",
    "threshold-ecdsa",
] }
subtle = "2.6"
threshold-prf = { path = "../threshold-prf" }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
router-ab-cloudflare = { path = "../router-ab-cloudflare" }
