[package]
name = "router-ab-ecdsa-client-protocol"
version = "0.1.0"
edition = "2021"
description = "Client-safe public wire and verification protocol for Router A/B ECDSA"
license = "Apache-2.0"
publish = false

[lib]
name = "router_ab_ecdsa_client_protocol"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["hpke"]
hpke = [
  "dep:base64ct",
  "dep:hpke-ng",
  "dep:rand_chacha",
  "dep:rand_core",
  "dep:zeroize",
]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"], optional = true }
curve25519-dalek = { version = "=4.1.3", features = ["digest", "precomputed-tables"] }
ed25519-dalek = { version = "2.1", default-features = false }
hpke-ng = { version = "0.1.0", optional = true }
rand_chacha = { version = "0.9", optional = true }
rand_core = { version = "0.9", optional = true }
sha2 = "0.10"
subtle = "=2.6.1"
zeroize = { version = "1.8", optional = true }
