[package]
name = "router-ab-ed25519-yao-client"
version = "0.1.0"
edition = "2021"
description = "Client-only registration boundary for Router A/B Ed25519 Yao"
license = "Apache-2.0"
publish = false

[lib]
name = "router_ab_ed25519_yao_client"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
curve25519-dalek = { version = "=4.1.3", features = ["zeroize"] }
frost-ed25519 = { version = "2.2", default-features = false, features = ["serialization", "std"] }
hpke-ng = "0.1.0"
rand_chacha = "0.9"
rand_core = "0.9"
router-ab-core = { path = "../router-ab-core" }
router-ab-ed25519-yao = { path = "../router-ab-ed25519-yao" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signer-core = { path = "../signer-core", features = ["ed25519-yao-derivation", "near-threshold-ed25519"] }
subtle = { version = "=2.6.1", default-features = false }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
router-ab-dev = { path = "../router-ab-dev" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
