[package]
name = "router-ab-ed25519-yao"
version = "0.1.0"
edition = "2021"
description = "Transport-neutral Router A/B composition adapter for Ed25519 Yao"
license = "Apache-2.0"
publish = false

[lib]
name = "router_ab_ed25519_yao"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
ed25519-yao = { path = "../ed25519-yao", features = ["local-protocol"] }
hpke-ng = "0.1.0"
rand_core_09 = { package = "rand_core", version = "0.9.5" }
router-ab-core = { path = "../router-ab-core" }
router-ab-ed25519-yao-protocol = { path = "../router-ab-ed25519-yao-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signer-core = { path = "../signer-core", features = ["ed25519-yao-derivation", "near-threshold-ed25519"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
bs58 = "0.5"
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
frost-ed25519 = { version = "2.2", default-features = false, features = ["serialization", "std"] }
