[package]
name = "signer-core"
version = "0.1.0"
edition = "2021"
description = "Shared signer core primitives for web and iOS bindings"
license = "Apache-2.0"

[lib]
name = "signer_core"
path = "src/lib.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
hkdf = { version = "0.12", optional = true }
borsh = { version = "1.3", features = ["derive"], optional = true }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"], optional = true }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
bs58 = { version = "0.5", optional = true }
base64ct = { version = "1.6", features = ["alloc"], optional = true }
ed25519-dalek = { version = "2.1", default-features = false, optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
threshold-signatures = { git = "https://github.com/near/threshold-signatures", rev = "db609be5021eb9d794f577601f422818fbdfe246", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
curve25519-dalek = { version = "=4.1.3", features = ["rand_core", "zeroize"], optional = true }
frost-ed25519 = { version = "2.2", default-features = false, features = ["serialization", "std"], optional = true }

[features]
default = []
secp256k1 = ["dep:hkdf", "dep:k256", "dep:sha2", "dep:sha3"]
near-crypto = ["dep:hkdf", "dep:sha2", "dep:base64ct", "dep:chacha20poly1305"]
tx-finalization = ["dep:serde", "dep:sha3"]
threshold-ecdsa = ["dep:k256", "dep:threshold-signatures", "dep:rand_core"]
near-ed25519-recovery = ["dep:hkdf", "dep:sha2", "dep:base64ct", "dep:curve25519-dalek", "dep:serde", "dep:bs58", "dep:rand_core", "dep:ed25519-dalek"]
near-threshold-ed25519 = ["near-ed25519-recovery", "dep:frost-ed25519", "dep:borsh"]

[dev-dependencies]
serde_json = "1.0"
