[package]
name = "threshold-prf"
version = "0.1.0"
edition = "2021"
description = "Threshold PRF prototype for signing-root server input derivation"
license = "Apache-2.0"

[lib]
name = "threshold_prf"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bench]]
name = "threshold_prf_baseline"
harness = false

[dependencies]
curve25519-dalek = { version = "=4.1.3", features = ["digest", "rand_core", "zeroize"] }
rand_core = "0.6.4"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
