[package]
name = "ed25519-yao-generator"
version = "0.1.0"
edition = "2021"
description = "Host-only reference oracle and test-vector generator for Ed25519 Yao"
license = "Apache-2.0"
publish = false

[lib]
name = "ed25519_yao_generator"
path = "src/lib.rs"

[dependencies]
curve25519-dalek = { version = "=4.1.3", features = ["group"] }
ed25519-dalek = "2.1"
sha2 = "0.10"
