[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceid-verifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ecapa = [
  "numpy>=1.26",
  "speechbrain>=1.0.0",
  "torch==2.6.*",
  "torchaudio==2.6.*",
]
moonshine = [
  "moonshine-voice==0.0.71",
]

[tool.setuptools.packages.find]
include = ["voiceid_verifier*"]

[tool.pytest.ini_options]
pythonpath = ["."]
