[package]
name = "ecdsa_client_signer"
version = "0.1.0"
edition = "2021"
description = "Browser-targeted ECDSA role-local client signer"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
bincode = "1.3"
ecdsa-hss = { path = "../../crates/ecdsa-hss" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = "1.0"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
sha2 = "0.10"
signer-core = { path = "../../crates/signer-core", features = ["threshold-ecdsa-hss", "typescript-bindings"] }
wasm-bindgen = "=0.2.100"
