[package]
name = "eth_signer"
version = "0.1.0"
edition = "2021"
description = "EVM transaction hashing/encoding + secp256k1 signing (WASM)"
repository = "https://github.com/web3-authn/sdk"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
bincode = "1.3"
getrandom = { version = "0.2.15", features = ["js"] }
hkdf = "0.12"
js-sys = "0.3"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
num-bigint = "0.4"
num-traits = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
sha3 = "0.10"
wasm-bindgen = "0.2"
zeroize = "1.8"
threshold-signatures = { git = "https://github.com/near/threshold-signatures", rev = "db609be5021eb9d794f577601f422818fbdfe246" }
signer-platform-web = { path = "../../crates/signer-platform-web", features = ["secp256k1", "tx-finalization", "threshold-ecdsa"] }
ecdsa-hss = { path = "../../crates/ecdsa-hss" }
