[package]
name = "evm_transaction_codec"
version = "0.1.0"
edition = "2021"
description = "Public EIP-1559 hashing and encoding for WebAssembly"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
signer-core = { path = "../../crates/signer-core", features = ["tx-finalization"] }
wasm-bindgen = "=0.2.100"
