[package]
name = "hss_client_signer"
version = "0.1.0"
edition = "2021"
description = "Browser-targeted Ed25519 HSS client signer"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
bincode = "1.3"
ecdsa-hss = { path = "../../crates/ecdsa-hss" }
ed25519-hss = { path = "../../crates/ed25519-hss" }
js-sys = "0.3"
serde = "1.0"
sha2 = "0.10"
signer-platform-web = { path = "../../crates/signer-platform-web", features = ["near-ed25519-recovery"] }
wasm-bindgen = "=0.2.100"
