[package]
name = "router_ab_ecdsa_derivation_client"
version = "0.1.0"
edition = "2021"
description = "Browser-targeted ECDSA role-local client signer"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64ct = { version = "1.6", features = ["alloc"] }
router-ab-ecdsa-client-protocol = { path = "../../crates/router-ab-ecdsa-client-protocol" }
router-ab-ecdsa-derivation = { path = "../../crates/router-ab-ecdsa-derivation" }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = "1.0"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
signer-core = { path = "../../crates/signer-core", features = ["ecdsa-role-local-client", "typescript-bindings"] }
wasm-bindgen = "=0.2.100"
zeroize = "1.8"
