[package]
name = "router_ab_ecdsa_online_client"
version = "0.1.0"
edition = "2021"
description = "Browser Client-only Router A/B ECDSA online signing WASM"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
router-ab-ecdsa-online = { path = "../../crates/router-ab-ecdsa-online" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.100"
zeroize = "1.8"
